crates/hpc-core/tests/compile_fail/api_inflight_read.stderr
error[E0599]: no method named `read_blocking` found for struct `DeviceBuffer<'_, u8, InFlight>` in the current scope
  --> tests/compile_fail/api_inflight_read.rs:19:14
   |
19 |     inflight.read_blocking(&queue, &mut out).unwrap();
   |              ^^^^^^^^^^^^^ method not found in `DeviceBuffer<'_, u8, InFlight>`
   |
   = note: the method was found for
           - `DeviceBuffer<'brand, T, Mapped>`
           - `DeviceBuffer<'brand, T, Written>`
